--- a/app/src/main/res/layout/fragment_akun.xml
+++ b/app/src/main/res/layout/fragment_akun.xml
@@ -185,7 +185,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="12dp"
-                    android:layout_marginRight="16dp">
+                    android:layout_marginRight="16dp"
+                    android:onClick="showReports">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -215,7 +216,8 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/ic_chevron_right_black_24dp" />
+                        android:src="@drawable/ic_chevron_right_black_24dp"
+                        />
 
                 </RelativeLayout>
 
