--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -26,9 +26,11 @@
                 android:layout_height="111dp"
                 android:adjustViewBounds="true"
                 android:padding="0dp"
+                android:background="#EEEEEE"
                 android:scaleType="centerCrop"/>
 
             <TextView
+                android:id="@+id/tv_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
