--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -19,7 +19,7 @@
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nama"
+            android:text=" "
             android:layout_toRightOf="@id/iv_profile_pic"
             android:textStyle="bold"
             android:textColor="#000000"
@@ -33,9 +33,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/tv_name"
-            android:text="1 hour ago"
+            android:text=" "
             android:textColor="#757575"
             android:textSize="14sp"
+            android:maxLines="1"
             android:layout_marginTop="2dp"
             android:layout_marginLeft="12dp"/>
 
@@ -48,7 +49,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="20dp"
-            android:text="accumsan nisl vitae, ornare purus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed feugiat nisl"/>
+            android:text=" "/>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
